# sdcard

./: ENVIRONMENT.md  README.md  environment.yml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: instructions.instructions.md  python.instructions.md
examples/: import.yml
sdcard/: config.py  import_all.py  main.py
sdcard/bruv/: dodo.py  gpmf.py  impact_detector.py  main.py  stage.py  sychonise.py
sdcard/clip/: in_water.py
sdcard/gps/: gps_dodo.py  main.py
sdcard/utils/: cards.py  cards_discovery.py  cli_basic.py  cli_defaults.py  cli_format.py  cli_getbins.py  cli_import.py  cli_probe.py  cli_scan.py  cli_thumbnail.py  cli_turbo.py  cli_workflow.py  cli_xif.py  config_path_cache.py  file_system.py  import_conflicts.py  import_metadata.py  import_transfer.py  import_transfer.py.bak  mount_tools.py  platform_adapters.py  usb.py
sdcard/web/: app.py
sdcard/web/templates/: index.html
tests/: test_cli_getbins.py  test_cli_import_windows_drive_root.py  test_cli_register.py  test_cli_thumbnail.py  test_cli_turbo_progress.py  test_cli_turbo_worker_status.py  test_cli_workflow.py  test_cli_xif.py  test_config_path_cache.py  test_import_all_progress.py  test_import_conflicts.py  test_import_transfer_manifest.py  test_import_verify.py  test_register_metadata.py
web/: video_waypoint_browser.py  waypoint_select.py
web/templates/: video_waypoint_browser.html  waypoint_select.html
