[tool.poetry]
name = "sdcard"
version = "0.1.0"
description = "package for managing SD cards"
authors = ["Nick Mortimer <nick.mortimer@csiro.au>"]
readme = "README.md"

[tool.poetry.scripts]
sdcard = "sdcard.main:sdcard"
sdall = "sdcard.import_all:sdall"
bruv = "sdcard.bruv.main:goprobruv"


[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = "^2.2.0"
psutil = "^5.9.8"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
