[tool.poetry]
name = "sdcard"
version = "0.1.0"
description = "package for managing SD cards"
authors = ["Nick Mortimer <nick.mortimer@csiro.au>"]
readme = "README.md"

[tool.poetry.scripts]
sdcard = "sdcard.main:sdcard"
bruv = "sdcard.bruv.main:goprobruv"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.14.0"}
pandas = "^2.2.0"
psutil = "^5.9.8"
openpyxl = "^3.1.2"
pyyaml = "^6.0"
jinja2 = "^3.1.0"
wmi = {version = "^1.5.1", markers = "sys_platform == 'win32'"}
cookiecutter = "^2.5.0"
telemetry-parser = "^0.14.0"
scipy = "^1.13.0"
numpy = "^2.0.0"
opencv-python = "^4.10.0"

pywinusb = { version = "^0.4.2", markers = "sys_platform == 'win32'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
